--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
+### IntelliJ IDEA ###
+.idea
 *.iml
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/captures
-.externalNativeBuild
+
